--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "@tailwindcss/postcss": "^4",
     "babel-plugin-react-compiler": "1.0.0",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0"
+    "tailwindcss-animate": "^1.0.7"
   }
 }
